# hyperscale

./: .gitmodules  README.md  blue.py  boot.py  main.py
boards/LILYGO_T-DisplayS3-AMOLED/: manifest.py
case/: bottom_case.scad  common.scad  knob.scad  top_case.scad
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: main.rs
firmware/ui/: ingredientlist.slint  main.slint  progressbar.slint  recipe.slint  recipegoing.slint  recipelist.slint  recipesgoing.slint  scale.slint  strikethrough.slint  styling.slint  weighingingredient.slint
fs/: boot.py
fw/boards/LILYGO_T-DisplayS3-AMOLED/: mpconfigboard.cmake
fw/fs/: blue.py  display.py  main.py  observable.py  qdec.py  recipe.py
fw/fs/ui/: iconmenu.py  ingredients.py  recipe.py  weighprogress.py  weight.py
fw/modules/lvgl/: lv_conf.h  micropython.cmake
new-fw/: Cargo.toml
new-fw/src/: main.rs
new-fw/ui/: ingredientlist.slint  main.slint  recipegoing.slint  recipelist.slint  recipesgoing.slint  scale.slint  styling.slint  weighingingredient.slint
pcb/: LILYGO T-Display-S3-AMOLED-Model.step  button round 12mm.step  scale_pcb.kicad_pcb  scale_pcb.kicad_prl  scale_pcb.kicad_pro  scale_pcb.kicad_sch  scale_pcb.xml
