[package]
name = "scale-fw"
version = "0.1.0"
authors = ["Jessie Grosen"]
edition = "2021"
license = "GPL 3"
repository = "https://github.com/jmgrosen/smart-scale"
description = "Firmware for my recipe-guiding scale"

[dependencies]
hal = { package = "esp-hal", version = "0.19.0", features = [
    "esp32s3",
    "opsram-8m",
    "embedded-hal",
    # "psram-80mhz",
] }
esp-backtrace = { version = "0.7.0", features = [
    "esp32s3",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.5.0", features = ["esp32s3"] }
esp-alloc = { version = "0.3.0" }

embedded-hal-1 = { package = "embedded-hal", version = "1.0.0" }
embedded-graphics = { version = "0.8.0" }
t-display-s3-amoled = { git = "https://github.com/jmgrosen/t-display-s3-amoled-rs", rev = "0d67125" }
slint = { version = "1.7", default-features = false, features = [
    "compat-1-2",
    "libm",
    "unsafe-single-threaded",
    "renderer-software",
] }
tinygif = "0.0.3"

rotary-encoder-hal = { git = "https://github.com/flyaruu/rotary-encoder-hal", rev = "b8c5bae", features = ["table-decoder", "embedded-hal-1"] }
critical-section = { version = "1.1.2" }

nau7802 = { git = "https://github.com/jmgrosen/nau7802-rs", rev = "63b17fe" }
nb = "1"
heapless = "0.8"
debouncr = "0.2.2"

[build-dependencies]
slint-build = "1.7"

[features]
default = []
